# python-mss

./: .coafile  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README  README-pip.rst  README.md  README.rst  appveyor.yml  check.ps1  check.sh  dev-requirements.txt  github-release-notes.md  mss.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-linux.py  test-raw.py  tests-requirements.txt  tests.py  tox.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml  tests.yml
.travis/: install.sh
demos/: cat-detector.py  tinytv-stream-simple.py  tinytv-stream.py  video-capture-simple.py  video-capture.py
demos/common/: pipeline.py
dep/linux/: Makefile  mss.c
doc/: AUTHORS  CHANGELOG  CONTRIBUTORS  LICENSE  QUALITY  TESTING  THANKS  TODO  linux-slow-version  tests-linux.c
docs/: Makefile  make.bat
docs/source/: api.rst  changelog.rst  conf.py  developers.rst  examples.rst  history.rst  index.rst  installation.rst  support.rst  usage.rst  versioning.rst  where.rst
docs/source/examples/: callback.py  custom_cls_image.py  fps.py  fps_multiprocessing.py  from_pil_tuple.py  linux_display_keyword.py  linux_xshm_backend.py  numpy_rgb.py  opencv_numpy.py  part_of_screen.py  part_of_screen_monitor_2.py  pil.py  pil_pixels.py
docs/source/release-history/: unreleased.md  v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.0.6.md  v0.0.7.md  v0.0.8.md  v0.1.0.md  v0.1.1.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v10.0.0.md  v10.1.0.md  v10.2.0.md  v11.0.0.md  v2.0.0.md  v2.0.18.md  v2.0.22.md  v3.0.0.md  v3.0.1.md  v3.1.0.md  v3.1.1.md  v3.1.2.md  v3.2.0.md  v3.2.1.md  v3.3.0.md  v3.3.1.md  v3.3.2.md  v4.0.0.md  v4.0.1.md  v4.0.2.md  v5.0.0.md  v5.1.0.md  v6.0.0.md  v6.1.0.md  v7.0.0.md  v7.0.1.md  (+7 more)
examples/: callback.py  linux-display_keyword.py  opencv-numpy.py  part-of-screen.py  pil-pixels.py  pil.py
mss/: __init__.py  __main__.py  base.py  base.pyi  darwin.py  darwin.pyi  exception.py  factory.py  factory.pyi  helpers.py  linux.py  models.py  screenshot.py  tools.py  windows.py  windows.pyi
mss/dep/linux/: build.sh
mss/linux/: build.sh
mss/tests/: bench_bgra2rgb.py  bench_general.py  conftest.py  test_bgra_to_rgb.py  test_cls_image.py  test_find_monitors.py  test_get_pixels.py  test_gnu_linux.py  test_implementation.py  test_issue_220.py  test_leaks.py  test_macos.py  test_save.py  test_setup.py  test_third_party.py  test_tools.py  test_windows.py
src/mss/: __init__.py  __main__.py  base.py  buffer.py  darwin.py  exception.py  factory.py  linux.py  models.py  screenshot.py  tools.py  windows.py
src/mss/linux/: __init__.py  base.py  getimage.py  xcb.py  xcbgen.py  xcbhelpers.py  xgetimage.py  xlib.py  xshmgetimage.py
src/mss/windows/: __init__.py  gdi.py
src/tests/: bench_bgra2rgb.py  bench_general.py  bench_grab_windows.py  conftest.py  test_bgra_to_rgb.py  test_buffer.py  test_cls_image.py  test_compat_10_1.py  test_compat_exports.py  test_compat_linux_api.py  test_find_monitors.py  test_find_windows.py  test_get_pixels.py  test_gnu_linux.py  test_implementation.py  test_issue_220.py  test_leaks.py  test_macos.py  test_primary_monitor.py  test_save.py  test_setup.py  test_third_party.py  test_tools.py  test_windows.py  test_xcb.py  thread_helpers.py
src/xcbproto/: README.md  gen_xcb_to_py.py  randr.xml  render.xml  shm.xml  xfixes.xml  xproto.xml
stubs/mss/: __init__.pyi  base.pyi  darwin.pyi  factory.pyi  linux.pyi  windows.pyi
test/: data-windows.raw  profiling.py  screenshot.py  test-linux  test-linux.c  test-raw-windows.py  test-raw.py  timer.py
tests/: bench_bgra2rgb.py  bench_general.py  benchmarks.py  check-types.sh  conftest.py  dummy.xorg.conf  fps.py  leaks.py  monitor-1024x768.raw  test_attributes.py  test_bgra_to_rgb.py  test_cls_image.py  test_enum_display_monitors.py  test_find_monitors.py  test_get_pixels.py  test_gnu_linux.py  test_implementation.py  test_leaks.py  test_macos.py  test_save.py  test_third_party.py  test_tools.py  test_windows.py
