[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mss"
description = "An ultra fast cross-platform multiple screenshots module in pure python using ctypes."
readme = "README.md"
requires-python = ">= 3.9"
authors = [
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
maintainers = [
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
license = { file = "LICENSE.txt" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
  "Topic :: Software Development :: Libraries",
]
keywords = [
    "BitBlt",
    "ctypes",
    "EnumDisplayMonitors",
    "CGGetActiveDisplayList",
    "CGImageGetBitsPerPixel",
    "monitor",
    "screen",
    "screenshot",
    "screencapture",
    "screengrab",
    "XGetImage",
    "XGetWindowAttributes",
    "XRRGetScreenResourcesCurrent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/BoboTiG/python-mss"
Documentation = "https://python-mss.readthedocs.io"
Changelog = "https://github.com/BoboTiG/python-mss/blob/main/CHANGELOG.md"
Source = "https://github.com/BoboTiG/python-mss"
Sponsor = "https://github.com/sponsors/BoboTiG"
Tracker = "https://github.com/BoboTiG/python-mss/issues"
"Released Versions" = "https://github.com/BoboTiG/python-mss/releases"

[project.scripts]
mss = "mss.__main__:main"

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "mypy==1.13.0",
  "ruff==0.8.2",
  "twine==6.0.1",
]
docs = [
  "sphinx==8.1.3",
]
tests = [
  "numpy==2.1.3 ; sys_platform == 'linux' and python_version == '3.13'",
  "pillow==11.0.0 ; sys_platform == 'linux' and python_version == '3.13'",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "pytest-rerunfailures==15.0",
  "pyvirtualdisplay==3.0 ; sys_platform == 'linux'",
]

[tool.hatch.version]
path = "src/mss/__init__.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
only-include = [
  "CHANGELOG.md",
  "CHANGES.md",
  "CONTRIBUTORS.md",
  "docs/source",
  "src",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/mss",
]

[tool.mypy]
# Ensure we know what we do
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

# Imports management
ignore_missing_imports = true
follow_imports = "skip"

# Ensure full coverage
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Restrict dynamic typing (a little)
# e.g. `x: List[Any]` or x: List`
# disallow_any_generics = true

strict_equality = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """
  --showlocals
  --strict-markers
  -r fE
  -vvv
  --cov=src/mss
  --cov-report=term-missing:skip-covered
"""

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["ALL"]
ignore = [
  "ANN401",   # typing.Any
  "C90",      # complexity
  "COM812",   # conflict
  "D",        # TODO
  "ISC001",   # conflict
  "T201",     # `print()`
]

[tool.ruff.lint.per-file-ignores]
"docs/source/*" = [
  "ERA001",   # commented code
  "INP001",   # file `xxx` is part of an implicit namespace package
]
"src/tests/*" = [
  "FBT001",   # boolean-typed positional argument in function definition
  "PLR2004",  # magic value used in comparison
  "S101",     # use of `assert` detected
  "S602",     # `subprocess` call with `shell=True`
  "S603",     # `subprocess` call
  "SLF001",   # private member accessed
]
