[metadata]
name = mss
version = 5.1.0
author = Mickaël 'Tiger-222' Schoentgen
author-email = contact@tiger-222.fr
description = An ultra fast cross-platform multiple screenshots module in pure python using ctypes.
long_description = file: README.rst
url = https://github.com/BoboTiG/python-mss
home-page = https://pypi.org/project/mss/
project_urls =
    Documentation = https://python-mss.readthedocs.io
    Source = https://github.com/BoboTiG/python-mss
    Tracker = https://github.com/BoboTiG/python-mss/issues
keywords = screen, screenshot, screencapture, screengrab
license = MIT
license_file = LICENSE
platforms = Darwin, Linux, Windows
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: Software Development :: Libraries

[options]
zip-safe = False
include_package_data = True
packages = mss
python_requires = >=3.5

[options.entry_points]
console_scripts =
    mss = mss.__main__:main

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120

[tool:pytest]
addopts =
    --showlocals
    --strict
    --failed-first
    -r fE
    -v
