[metadata]
name = mss
version = 9.0.2
author = Mickaël 'Tiger-222' Schoentgen
author_email = contact@tiger-222.fr
description = An ultra fast cross-platform multiple screenshots module in pure python using ctypes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BoboTiG/python-mss
home_page = https://pypi.org/project/mss/
project_urls =
    Documentation = https://python-mss.readthedocs.io
    Source = https://github.com/BoboTiG/python-mss
    Tracker = https://github.com/BoboTiG/python-mss/issues
keywords = screen, screenshot, screencapture, screengrab
license = MIT
license_files =
    LICENSE
platforms = Darwin, Linux, Windows
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.8
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
mss = py.typed

[options.entry_points]
console_scripts =
    mss = mss.__main__:main

[coverage:run]
omit =
    mss/tests/*

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120

[pylint.MESSAGES CONTROL]
disable = locally-disabled, too-few-public-methods, too-many-instance-attributes, duplicate-code

[pylint.REPORTS]
max-line-length = 120
output-format = colorized
reports = no

[tool:pytest]
pythonpath = src
addopts =
    --showlocals
    --strict-markers
    -r fE
    -v
    --cov=mss
    --cov-report=term-missing
    --reruns 5
